--- a/resources/views/test/bl.html
+++ b/resources/views/test/bl.html
@@ -15,16 +15,17 @@
 	<script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/bl.js"></script>
 	<script type="text/javascript" src="./js/demo.js"></script>
+
 </head>
-<body style="background: url(./img/bg.jpg) no-repeat; background-size:100% 100%;">
+<body style="background: #97e0b8;">
 	<div class="container">
 		<!-- top -->
 		<div class="bl_top">
 			<div class="row">
 				<div class="bl_icon"><img src="./img/bl.png" height="90px" style="margin-top:10px;margin-left: 15px"></div>
 				<div class="clearfix bl_top_word"><img src="./img/wh.png" alt="" /><a href="bl_contact.html#Feedback">意见反馈</a></div>
-				<div class="clearfix bl_top_word"><img src="./img/person.png" alt="" />员工登录</div>
-				<div class="clearfix bl_top_word"><img src="./img/ss.png" alt="" /><span class="bl_cx">查询更多</span><input type="" placeholder="请输入你想搜索的内容···" class="bl_cx_k clearfix"></div>
+				<div class="clearfix bl_top_word"><img src="./img/person.png" alt="" /><a href="#">员工登录</a></div>
+				<div class="clearfix bl_top_word"><img src="./img/ss.png" alt="" /><span class="bl_cx"><a href="#">查询更多</a></span><input type="" placeholder="请输入你想搜索的内容···" class="bl_cx_k clearfix"></div>
 			</div>
 			<div class="bl_top_nav">
 				<ul class="list-inline clearfix bl_top_ul">
@@ -48,21 +49,33 @@
 			  <!-- Wrapper for slides -->
 			  <div class="carousel-inner" role="listbox">
 			    <div class="item active">
-			      <img src="./img/product_banner.jpg"/>
-			      <div class="carousel-caption bl_company_banner_word ajax_company_1" >
-			        
+			      <img src="./img/p1.jpg" class="ajax_company_img_1" style="width:1200px;margin-top: -360px;" />
+			      <div class="carousel-caption bl_company_banner_word ajax_company_word_1" >
+			        <ul>
+			        	<li style="font-size: 40px;margin-bottom: 25px;">博露 农业我们始终坚持着</li>
+			        	<li style="font-size: 30px;margin-bottom: 10px;"></li>
+			        	<li style="font-size: 20px;line-height: 35px;font-weight: 100;">上海博露农业有限公司是所属光明食品集团五四农场的全国资公司，拥有3000余亩高标准粮食生产基地。经过杭州湾畔充沛的日照沐浴，以及天然河水的灌溉的，将给您不一般的感受。环境优美、水土资源丰富、空气清新无污染，具有发展农业得天独厚的优势。</li>
+			        </ul>
 			      </div>
 			    </div>
 			    <div class="item">
-			      <img src="./img/product_banner.jpg"/>
-			      <div class="carousel-caption bl_company_banner_word ajax_company_2">
-			        
+			      <img src="./img/p1.jpg" class="ajax_company_img_2" style="width:1200px;margin-top: -360px;" />
+			      <div class="carousel-caption bl_company_banner_word ajax_company_word_2">
+			        <ul>
+			        	<li style="font-size: 40px;margin-bottom: 25px;">博露 农业我们始终坚持着</li>
+			        	<li style="font-size: 30px;margin-bottom: 10px;"></li>
+			        	<li style="font-size: 20px;line-height: 35px;font-weight: 100;">上海博露农业有限公司是所属光明食品集团五四农场的全国资公司，拥有3000余亩高标准粮食生产基地。经过杭州湾畔充沛的日照沐浴，以及天然河水的灌溉的，将给您不一般的感受。环境优美、水土资源丰富、空气清新无污染，具有发展农业得天独厚的优势。</li>
+			        </ul>
 			      </div>
 			    </div>
 			    <div class="item">
-			      <img src="./img/wxgzh.png"/>
-			      <div class="carousel-caption bl_company_banner_word ajax_company_3">
-			        
+			      <img src="./img/p1.jpg" class="ajax_company_img_3" style="width:1200px;margin-top: -360px;" />
+			      <div class="carousel-caption bl_company_banner_word ajax_company_word_3">
+			        <ul>
+			        	<li style="font-size: 40px;margin-bottom: 25px;">博露 农业我们始终坚持着</li>
+			        	<li style="font-size: 30px;margin-bottom: 10px;"></li>
+			        	<li style="font-size: 20px;line-height: 35px;font-weight: 100;">上海博露农业有限公司是所属光明食品集团五四农场的全国资公司，拥有3000余亩高标准粮食生产基地。经过杭州湾畔充沛的日照沐浴，以及天然河水的灌溉的，将给您不一般的感受。环境优美、水土资源丰富、空气清新无污染，具有发展农业得天独厚的优势。</li>
+			        </ul>
 			      </div>
 			    </div>
 			  </div>
@@ -83,71 +96,62 @@
 		<div class="bl_company" id="bl_company">
 			<div class="bl_company_word text-center clearfix">
 				<div>
-						<div class="jq22-container">
-							<div id="wrapper">
-								<div id="slider-wrap" >
-								      	  <ul id="slider">
-								          	 <li class="fa-img">             
-								                <img src="./img/pic.jpg" class="fa fa-image fa_img"/>
-								             </li>
+					<div class="jq22-container" style="background: 6ae2ae;">
+						<div id="wrapper">
+							<div id="slider-wrap" >
+								<ul id="slider">
+							  	    <li class="fa-img">             
+							           <img src="./img/certificate.png" class="fa fa-image fa_img ajax_company_img_4"/>
+							        </li>
 
-								            <li class="fa-img">              
-								                <img src="./img/pic.jpg" class="fa fa-image fa_img"/>
-								             </li>
+							        <li class="fa-img">              
+							           <img src="./img/certificate.png" class="fa fa-image fa_img ajax_company_img_5"/>
+							        </li>
 
-								             <li class="fa-img">
-								                <img src="./img/pic.jpg" class="fa fa-image fa_img"/>
-								             </li>
-								             
-								             <li class="fa-img">
-								                <img src="./img/pic.jpg" class="fa fa-image fa_img"/>
-								             </li>
-								             
-								             <li class="fa-img">
-								                <img src="./img/pic.jpg" class="fa fa-image fa_img"/>
-								             </li>
-								            
-								          </ul>
-								           <!--controls-->
-								          <div class="btns" id="next"><i class="fa fa-arrow-right"></i></div>
-								          <div class="btns" id="previous"><i class="fa fa-arrow-left"></i></div>
-								          <div id="counter"></div>
-								          
-								          <div id="pagination-wrap">
-								            <ul>
-								            </ul>
-								          </div>
-								          <!--controls-->        
-								      </div>
+							        <li class="fa-img">
+							           <img src="./img/certificate.png" class="fa fa-image fa_img ajax_company_img_6"/>
+							        </li>
+							     
+							        <li class="fa-img">
+							           <img src="./img/certificate.png" class="fa fa-image fa_img ajax_company_img_7"/>
+							        </li>
+							     
+							        <li class="fa-img">
+							           <img src="./img/certificate.png" class="fa fa-image fa_img" />
+							        </li>
+							    </ul>
+						        <!--controls-->
+						        <div id="pagination-wrap">
+						            <ul>
+						            </ul>
+						        </div>       
 							</div>
 						</div>
-                        <script type="text/javascript" src="js/slide.js"></script>
+					</div>
+                    <script type="text/javascript" src="js/slide.js"></script>
 				</div>
 				<div>
 					<ul style="margin-left: 50px;margin-top: 8px;">
 						<li>农业一直为生活创造绿色</li>
-						<li style="margin-left: 65px;">打造更美好的生态农业</li>
-						<li style="font-size: 20px; width:350px;margin-left: 140px;margin-top: 30px;">上海博露农业有限公司曾名为上海博露草坪有限公司。公司位于上海市奉贤区五四农场场中路333号，多年来，面向上海市区及南部杭州湾，依托地理优势，积极发展草坪、水稻，积极发扬传承水稻农耕文化、草坪美观文化等。我们坚信用自己的双手，努力为城市农业多做贡献。</li>
+						<li style="margin-left: 65px; color: white;">打造更美好的生态农业</li>
+						<li style="font-size: 20px; width:350px;margin-left: 140px;margin-top: 30px;font-weight: 200;line-height: 30px;">上海博露农业有限公司曾名为上海博露草坪有限公司。公司位于上海市奉贤区五四农场场中路333号，展草坪、水稻，积极发扬传承水稻农耕文化、草坪美观文化等。我们坚信用自己的双手，努力为城市农业多做贡献。</li>
 					</ul>
 				</div>
 			</div>	
 			<div class="bl_company_wordAndP ">
 				<div class="list-inline clearfix text-center">
-					<span><img src="./img/company1.png" width="120px" /></span>
-					1992-至今
-					<div>上海博露农业有限公司曾名为上海博露草坪有限公司。公司位于上海市奉贤区五四农场场中路333号，展草坪、水稻，积极发扬传承水稻农耕文化、草坪美观文化等。我们坚信用自己的双手，努力为城市农业多做贡献。</div>
+					<span><img src="./img/company1.png" width="200px" /></span>
+					<div>上海博露农业有限公司成立1992年12月。是上海率先成立，迄今国内最大的集草坪科研、生产、销售、建坪、养护、咨询服务为一体的草坪公司。历经20多年的发展…</div>
 					<div class="bl_company_wordAndP_learnMore"><a href="article.html">Learn More ></a></div>
 				</div>
 				<div class="list-inline clearfix text-center">
-					<span><img src="./img/company2.png" width="114px" /></span>
-					企业资质
-					<div>上海博露农业有限公司曾名为上海博露草坪有限公司。公司位于上海路333号，多年来，面向上海市区及南部杭州湾，依托地理优势水稻农耕文化、草坪美观文化等。我们坚信用自己的双手，努力为城市农业多做贡献。</div>
+					<span><img src="./img/company2.png" width="200px" /></span>
+					<div>公司先后加入了国际草坪协会（ITS）、美国草坪生产者协会（TPI）、中国草坪学术委员会。进入企业发展新时期，博露将努力致力于水稻种植…</div>
 					<div class="bl_company_wordAndP_learnMore"><a href="article.html">Learn More ></a></div>
 				</div>
 				<div class="list-inline clearfix text-center">
-					<span><img src="./img/company3.png" /></span>
-					绿色博露
-					<div>上海博露农业有限公司曾名为上海博露草坪有限公司。公司位于上海市，积极发展草坪、水稻，积极发扬传承水稻农耕文化、草坪美观文化等。我们坚信用自己的双手，努力为城市农业多做贡献。</div>
+					<span><img src="./img/company3.png" width="200px"/></span>
+					<div>为了给市民们展现良好生态环境，增强了大家保护环境的意识，为谱写“殷实农场”环境优美新篇章，进一步贯彻落实大色块项目建设出了一份力…</div>
 					<div class="bl_company_wordAndP_learnMore clearfix"><a href="article.html">Learn More ></a></div>
 				</div>
 			</div>
@@ -155,9 +159,10 @@
 				<img src="./img/pic.jpg" width="70%" />
 				<div class="list-inline clearfix " style="position: absolute;bottom:90px;right:50px;width: 400px;height: 370px;
 				box-shadow: rgba(0,0,0,.5) 0 0 20px;background: white;">
-					<div style="font-weight: 600;margin: 15px 10px;color: #025600;">绿色博露</div>
-					<div style="font-weight: 550;margin-left: 10px;">上海博露农业有限公限公司</div>
-					<div class="text-center" style="width:300px;margin:auto;margin-top: 10px;line-height: 35px;">公司位于上海市奉贤区五四农场场中路333号，多年来，面向上海市区及南部杭州湾，依托地理优势，积极发展草坪、水稻，积极发扬传承水稻农耕文化、草坪美观文化等。我们坚信用自己的双手，努力为城市农业多做贡献。</div>
+					<div style="font-weight: 600;margin: 15px 10px;color: #025600;">博露志愿</div>
+					<div style="font-weight: 550;margin-left: 10px;">移栽紫云英，为千亩花海添彩</div>
+					<div class="text-center" style="width:290px;margin:auto;margin-top: 10px;line-height: 35px;font-size: 18px;">清明节将至，五四农场将迎来扫墓、踏春高峰期，千亩花海即将迎来最佳观赏期。为了给市民们展现“花园五四”的良好生态环境，春播人手紧缺之际，公司特组织“博露田园色块及美化环境”志愿者小组开展紫云英移栽活动。</div>
+					<div class="bl_company_wordAndP_learnMore1 clearfix"><a href="article.html">Learn More ></a></div>
 				</div>
 			</div>
 		</div>
@@ -183,5 +188,6 @@
 			<li><img src="./img/bl_bottomRight.png" width="80%" /></li>
 		</ul>
 	</div>
+	<script type="text/javascript" src="./js/load.js"></script>
 </body>
 </html>
