--- a/resources/views/test/bl_EnterpriseDynamics.html
+++ b/resources/views/test/bl_EnterpriseDynamics.html
@@ -23,8 +23,8 @@
 			<div class="row">
 				<div class="bl_icon"><img src="./img/bl.png" height="90px" style="margin-top:10px;margin-left: 15px"></div>
 				<div class="clearfix bl_top_word"><img src="./img/wh.png" alt="" /><a href="bl_contact.html#Feedback">意见反馈</a></div>
-				<div class="clearfix bl_top_word"><img src="./img/person.png" alt="" />员工登录</div>
-				<div class="clearfix bl_top_word"><img src="./img/ss.png" alt="" /><span class="bl_cx">查询更多</span><input type="" placeholder="请输入你想搜索的内容···" class="bl_cx_k clearfix"></div>
+				<div class="clearfix bl_top_word"><img src="./img/person.png" alt="" /><a href="#">员工登录</a></div>
+				<div class="clearfix bl_top_word"><img src="./img/ss.png" alt="" /><span class="bl_cx"><a href="#">查询更多</a></span><input type="" placeholder="请输入你想搜索的内容···" class="bl_cx_k clearfix"></div>
 			</div>
 			<div class="bl_top_nav">
 				<ul class="list-inline clearfix bl_top_ul">
@@ -50,19 +50,31 @@
 			    <div class="item active">
 			      <img src="./img/product_banner.jpg"/>
 			      <div class="carousel-caption bl_company_banner_word ajax_company_1" >
-			        
+			        <ul>
+			        	<li style="font-size: 40px;margin-bottom: 25px;">博露动态</li>
+			        	<li style="font-size: 30px;margin-bottom: 10px;">Blue News</li>
+			        	<li style="font-size: 20px;line-height: 35px;font-weight: 100;">我们的博露每天都在发生着新的故事，我们都在等待与您分享每一天的精彩博露…</li>
+			        </ul>
 			      </div>
 			    </div>
 			    <div class="item">
 			      <img src="./img/product_banner.jpg"/>
 			      <div class="carousel-caption bl_company_banner_word ajax_company_2">
-			        
+			        <ul>
+			        	<li style="font-size: 40px;margin-bottom: 25px;">博露动态</li>
+			        	<li style="font-size: 30px;margin-bottom: 10px;">Blue News</li>
+			        	<li style="font-size: 20px;line-height: 35px;font-weight: 100;">我们的博露每天都在发生着新的故事，我们都在等待与您分享每一天的精彩博露…</li>
+			        </ul>
 			      </div>
 			    </div>
 			    <div class="item">
 			      <img src="./img/wxgzh.png"/>
 			      <div class="carousel-caption bl_company_banner_word ajax_company_3">
-			        
+			        <ul>
+			        	<li style="font-size: 40px;margin-bottom: 25px;">博露动态</li>
+			        	<li style="font-size: 30px;margin-bottom: 10px;">Blue News</li>
+			        	<li style="font-size: 20px;line-height: 35px;font-weight: 100;">我们的博露每天都在发生着新的故事，我们都在等待与您分享每一天的精彩博露…</li>
+			        </ul>
 			      </div>
 			    </div>
 			  </div>
@@ -79,52 +91,47 @@
 			  </a>
 			</div>
 
-
-
-
 			<div class="bl_EnterpriseDynamics" id="bl_EnterpriseDynamics">
-			<script type="text/javascript" src="./jquery1.42.min.js"></script>
 			<script src="./js/jquery.SuperSlide.2.1.3.js"></script>
 			<div class="picScroll-left">
 				<div class="bd">
 					<ul class="picList text-center">
 						<li>
-							<div class="pic"><a href="#" target="_blank"><img src="images/pic1.jpg" /></a></div>
-							<div class="title"><a href="#" target="_blank">效果图1</a></div>
-							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;">吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫</div>
+							<div class="pic"><a href="./article.html" target="_blank"><img src="./img/p2.jpg" /></a></div>
+							<div class="title" style="font-size: 27px;margin: 10px 10px;"><a href="#" target="_blank">博露水稻高效亩产</a></div>
+							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;font-size: 15px;font-weight: 100;">77花优14申9A×繁1梗型三系杂交水稻亩产博露水稻成功落地…</div>
 						</li>
 						<li>
-							<div class="pic"><a href="#" target="_blank"><img src="images/pic2.jpg" /></a></div>
-							<div class="title"><a href="#" target="_blank">效果图2</a></div>
-							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;">吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫</div>
+							<div class="pic"><a href="./article.html" target="_blank"><img src="./img/p3.jpg" /></a></div>
+							<div class="title" style="font-size: 27px;margin: 10px 10px;"><a href="#" target="_blank">博露大数据</a></div>
+							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;font-size: 15px;font-weight: 100;">通过博露农业部门基于对水稻的新研究数据，发表了关于新型杂交稻亩产数据对比…</div>
 						</li>
 						<li>
-							<div class="pic"><a href="#" target="_blank"><img src="images/pic3.jpg" /></a></div>
-							<div class="title"><a href="#" target="_blank">效果图3</a></div>
-							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;">吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫</div>
+							<div class="pic"><a href="./article.html" target="_blank"><img src="./img/p4.jpg" /></a></div>
+							<div class="title" style="font-size: 27px;margin: 10px 10px;"><a href="#" target="_blank">“爱我博露”志愿者</a></div>
+							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;font-size: 15px;font-weight: 100;">清明节将至，五四农场将迎来扫墓、踏春高峰期，千亩花海即将迎来最佳观赏期…</div>
 						</li>
 						<li>
-							<div class="pic"><a href="#" target="_blank"><img src="images/pic4.jpg" /></a></div>
-							<div class="title"><a href="#" target="_blank">效果图4</a></div>
-							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;">吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫</div>
+							<div class="pic"><a href="./article.html" target="_blank"><img src="./img/p2.jpg" /></a></div>
+							<div class="title" style="font-size: 27px;margin: 10px 10px;"><a href="#" target="_blank">博露水稻高效亩产</a></div>
+							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;font-size: 15px;font-weight: 100;">77花优14申9A×繁1梗型三系杂交水稻亩产博露水稻成功落地…</div>
 						</li>
 						<li>
-							<div class="pic"><a href="#" target="_blank"><img src="images/pic5.jpg" /></a></div>
-							<div class="title"><a href="#" target="_blank">效果图5</a></div>
-							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;">吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫</div>
+							<div class="pic"><a href="./article.html" target="_blank"><img src="./img/p3.jpg" /></a></div>
+							<div class="title" style="font-size: 27px;margin: 10px 10px;"><a href="#" target="_blank">博露大数据</a></div>
+							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;font-size: 15px;font-weight: 100;">通过博露农业部门基于对水稻的新研究数据，发表了关于新型杂交稻亩产数据对比…</div>
 						</li>
 						<li>
-							<div class="pic"><a href="#" target="_blank"><img src="images/pic6.jpg" /></a></div>
-							<div class="title"><a href="#" target="_blank">效果图6</a></div>
-							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;">吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫吓到我到我到我dawdawdaw到大师大卫</div>
+							<div class="pic"><a href="./article.html" target="_blank"><img src="./img/p4.jpg" /></a></div>
+							<div class="title" style="font-size: 27px;margin: 10px 10px;"><a href="#" target="_blank">“爱我博露”志愿者</a></div>
+							<div style="width: 200px;word-wrap : break-word;height: 90px;margin: 0px 0px 0px 50px;font-size: 15px;font-weight: 100;">清明节将至，五四农场将迎来扫墓、踏春高峰期，千亩花海即将迎来最佳观赏期…</div>
 						</li>
 					</ul>
 				</div>
 				<div class="hd">
-					<a class="next"></a>
+					<a class="next">></a>
 					<ul></ul>
-					<a class="prev"></a>
-					<span class="pageState" style="margin-left: 0px;"></span>
+					<a class="prev"><</a>
 				</div>
 			</div>
 			
@@ -151,7 +158,11 @@
 		</ul>
 	</div>
 	<script type="text/javascript">
-	jQuery(".picScroll-left").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"left",autoPlay:true,vis:3,trigger:"click"});
+		$(function(){
+			jQuery(".picScroll-left").slide({titCell:".hd ul",mainCell:".bd ul",autoPage:true,effect:"left",autoPlay:true,vis:3,trigger:"click"});
+		})
+	
     </script>
+    <script type="text/javascript" src="./js/load.js"></script>
 </body>
 </html>
